Fix overflow issue

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -52,6 +52,7 @@
 }
 
 #hint {
+    overflow-x: scroll;
     margin-top: 8px;
 }
 
@@ -71,7 +72,7 @@
 }
 
 #problem-description {
-    overflow: hidden;
+    overflow-x: scroll;
     position: relative;
 }
 
@@ -121,7 +122,7 @@ textarea.md-preview {
 }
 div.md-preview {
     flex: 1;
-    overflow: hidden;
+    overflow-x: scroll;
     min-width: 0px;
     height: fit-content;
 }
